# bots_and_us_solutions

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/: Code_ParserConfig.cmake.in
include/: bit_stream.h  business_logic.h  code_parser.h  exceptions.h  file_wrapper.h  hardware.h  led_screen.h  utils.h  xxx_display.h
install_script/: install.sh
src/: bit_stream.cpp  business_logic.cpp  code_parser.cpp  exceptions.cpp  file_wrapper.cpp  hardware.cpp  led_screen.cpp  utils.cpp  xxx_display.cpp
template/: utils.tpp
test/include/: support_methods.h
test/resources/: too_short_code.txt
test/resources/input_files/: iso_encoding_codes.txt  too_long_code.txt  unexpected_input.txt  unexpected_input_2.txt  unrecognised_character.txt  unrecognised_character_unicode.txt  valid_codes.txt
test/src/: bit_code_tests.cpp  bit_stream_test.cpp  business_logic_test.cpp  checksum_test.cpp  file_wrapper_tests.cpp  hardware_test.cpp  input_file_tests.cpp  led_screen_test.cpp  pixel_code_test.cpp  save_png_test.cpp  support_methods.cpp  xxx_display_test.cpp
